# forum_dialog_bot

./: .gitignore  Makefile  docker-compose.yml.example
dialog_bot/: .env.example  Dockerfile  pyproject.toml
dialog_bot/app/bot/: bot.py
dialog_bot/app/bot/filters/: filters.py
dialog_bot/app/bot/handlers/: admin.py  general.py
dialog_bot/app/bot/middlewares/: __init__.py  repository.py  skip_bot.py  user.py
dialog_bot/app/bot/repository/: base.py  topics.py  users.py
dialog_bot/app/bot/schemas/: __init__.py  topic.py  user.py
dialog_bot/config/: __init__.py  config_reader.py  loggers.py
fix-user-service/: .env.example  Dockerfile  main.py  pyproject.toml
fix-user-service/config/: __init__.py  config_reader.py  get_session.py
fix-user-service/dependencies/: __init__.py  dependencies.py
fix-user-service/handlers/: __init__.py  user_fixation.py
fix-user-service/repository/: __init__.py  base.py  users.py
fix-user-service/schemas/: user.py
infrastructure/: .env.example  alembic.ini  pyproject.toml
infrastructure/config/: __init__.py  config_reader.py
infrastructure/database/alembic/: env.py
infrastructure/database/alembic/versions/: 20250703_1114_first_migration.py
infrastructure/database/models/: __init__.py  topic.py  users.py
